--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.0",
+    "serialize-javascript": "^2.1.2",
     "tachyons": "^4.11.1"
   },
   "scripts": {
